--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "vite --port 3000",
 		"build": "vite build",
 		"serve": "vite preview",
-		"start": "vite",
+		"start": "vite --host 0.0.0.0",
 		"check": "tsc --noEmit",
 		"pwa:generate": "pwa-assets-generator"
 	},
