--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
 		"build": "vite build",
 		"serve": "vite preview",
 		"start": "vite --host 0.0.0.0",
-		"check": "tsc --noEmit",
+    "check": "biome check --diagnostic-level=error src",
+    "format": "biome format --write src",
+    "lint": "biome lint --diagnostic-level=error src",
 		"pwa:generate": "pwa-assets-generator"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.0.0",
 		"@tanstack/react-router-devtools": "^1.121.5",
 		"@tanstack/router-plugin": "^1.121.4",
 		"@types/bun": "latest",
