--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"start": "vite --host 0.0.0.0",
     "check": "biome check --diagnostic-level=error src",
     "format": "biome format --write src",
-    "lint": "biome lint --diagnostic-level=error src",
-		"pwa:generate": "pwa-assets-generator"
+    "lint": "biome lint --diagnostic-level=error src"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.0",
@@ -20,7 +19,6 @@
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.5.2",
-		"postcss": "^8.5.5",
 		"tailwindcss": "^4.1.10",
 		"vite": "^6.3.5"
 	},
