build(deps): add `vite-plugin-mkcert`

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react": "^4.5.2",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5",
+    "vite-plugin-mkcert": "^1.17.8",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
